@@ -34,7 +34,6 @@ import org.zowe.apiml.product.logging.annotations.InjectApimlLogger;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 /**
@@ -179,6 +178,6 @@ public class ApiCatalogController {
             return Collections.emptyList();
         }
         return StreamSupport.stream(iterable.spliterator(), false)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
