@@ -10,12 +10,14 @@
 
 package org.zowe.apiml.message.core;
 
+import lombok.extern.slf4j.Slf4j;
 import org.zowe.apiml.message.storage.MessageTemplateStorage;
 import org.zowe.apiml.message.template.MessageTemplate;
 import org.zowe.apiml.message.template.MessageTemplates;
-import lombok.extern.slf4j.Slf4j;
 
-import java.util.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -51,8 +53,12 @@ public abstract class AbstractMessageService implements MessageService {
 
         try {
             return Message.of(key, messageTemplate, parameters);
-        } catch (IllegalFormatConversionException | MissingFormatArgumentException exception) {
-            log.debug("Internal error: Invalid message format was used", exception);
+        } catch (IllegalArgumentException exception) {
+            if (log.isDebugEnabled()) {
+                log.debug("Internal error: Invalid message format was used", exception);
+            } else {
+                log.warn("Internal error: Invalid message format was used for key: {}, enable debug for stack trace: {}", key, exception.getMessage());
+            }
             messageTemplate = validateMessageTemplate(Message.INVALID_MESSAGE_TEXT_FORMAT);
             return Message.of(key, messageTemplate, parameters);
         }
@@ -70,7 +76,7 @@ public abstract class AbstractMessageService implements MessageService {
         return parameters.stream()
             .filter(Objects::nonNull)
             .map(ob -> createMessage(key, ob))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -89,8 +95,10 @@ public abstract class AbstractMessageService implements MessageService {
      *
      * @param messageTemplates the list of message templates
      * @throws DuplicateMessageException when a message key already exists
+     * @throws IllegalArgumentException when message template is null
      */
     private void validateMessageTemplates(MessageTemplates messageTemplates) {
+        Objects.requireNonNull(messageTemplates);
         String existedMessageTemplates = messageTemplates.getMessages()
             .stream()
             .collect(
@@ -105,7 +113,7 @@ public abstract class AbstractMessageService implements MessageService {
             .map(Map.Entry::getKey)
             .collect(Collectors.joining(","));
 
-        if (!existedMessageTemplates.equals("")) {
+        if (!existedMessageTemplates.isEmpty()) {
             String exceptionMessage = String.format("Message template with number [%s] already exists", existedMessageTemplates);
             throw new DuplicateMessageException(exceptionMessage);
         }
