@@ -251,7 +251,7 @@ public class WebSecurity {
     @Bean
     public ReactiveClientRegistrationRepository clientRegistrationRepository() {
         if (!clientConfiguration.isConfigured()) {
-            return null;
+            return registrationId -> null;
         }
         return new InMemoryReactiveClientRegistrationRepository(this.getClientRegistrations());
     }
@@ -275,7 +275,7 @@ public class WebSecurity {
         Optional<ReactiveOAuth2AuthorizedClientService> authorizedClientService
     ) {
         if (!clientConfiguration.isConfigured()) {
-            return null;
+            return registrationId -> null;
         }
 
         var authorizedClientProvider = ReactiveOAuth2AuthorizedClientProviderBuilder
@@ -304,7 +304,7 @@ public class WebSecurity {
                 .jwkSetUri(c.getProvider().getJwkSetUri())
                 .clientName(c.getId())
                 .build()
-            ).collect(Collectors.toList());
+            ).toList();
     }
 
     public ServerHttpSecurity defaultSecurityConfig(ServerHttpSecurity http) {
