@@ -10,6 +10,7 @@
 
 package org.zowe.apiml.util.service;
 
+import io.restassured.http.Header;
 import io.restassured.response.Response;
 import io.restassured.response.ResponseBody;
 import jakarta.servlet.Servlet;
@@ -42,20 +43,13 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import static io.restassured.RestAssured.given;
 import static org.apache.http.HttpStatus.SC_NO_CONTENT;
 import static org.apache.http.HttpStatus.SC_OK;
 import static org.awaitility.Awaitility.await;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.fail;
-import static org.zowe.apiml.constants.EurekaMetadataDefinition.AUTHENTICATION_APPLID;
-import static org.zowe.apiml.constants.EurekaMetadataDefinition.AUTHENTICATION_SCHEME;
-import static org.zowe.apiml.constants.EurekaMetadataDefinition.ROUTES;
-import static org.zowe.apiml.constants.EurekaMetadataDefinition.ROUTES_GATEWAY_URL;
-import static org.zowe.apiml.constants.EurekaMetadataDefinition.ROUTES_SERVICE_URL;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.zowe.apiml.constants.EurekaMetadataDefinition.*;
 
 /**
  * This class simulate a service. You can create new instance dynamically in the test. It will register into discovery
@@ -278,36 +272,26 @@ public class VirtualService implements AutoCloseable {
      * The check means make serviceCount calls. There is a preposition that load balancer is based on cyclic queue and
      * if it will call multiple times (same to count of instances of same service), it should call all instances.
      *
-     * @param instanceCount Assumed count of instances of the same service at the moment
      * @param timeoutSec    Timeout in secs to break waiting
      */
-    public VirtualService waitForGatewayRegistration(int instanceCount, int timeoutSec) {
+    public VirtualService waitForGatewayRegistration(int timeoutSec) {
         final long time0 = System.currentTimeMillis();
         boolean slept = false;
+
         for (String gatewayUrl : getGatewayUrls()) {
             String url = gatewayUrl + "/application/instance";
 
-            // count of calls (to make instanceCount times until sleep)
-            int testCounter = 0;
             while (true) {
                 try {
                     final ResponseBody<?> responseBody = given().when()
                         .contentType(MediaType.APPLICATION_JSON_VALUE)
+                        .header(new Header("X-InstanceId", instanceId))
                         .get(url)
                         .body();
-                    // FIXME it seems the routing is not deterministic, the first time it's only one instance, the second time it's not guaranteeing that it's the same one replying.
-                    // A possible fix would be to use deterministic routing once implemented.
                     assertEquals(HttpMethod.GET + " " + instanceId, responseBody.print());
                     break;
                 } catch (RuntimeException | AssertionError e) {
-                    testCounter++;
-                    // less calls than instance counts, continue without waiting
-                    if (testCounter < instanceCount) continue;
-
-                    // instance should be called, but didn't, wait for a while and then try call again (instanceCount times)
-                    testCounter = 0;
-
-                    if (System.currentTimeMillis() - time0 > timeoutSec * 1000) throw e;
+                    if (System.currentTimeMillis() - time0 > timeoutSec * 1000L) throw e;
 
                     await().timeout(1, TimeUnit.SECONDS);
                     slept = true;
@@ -346,7 +330,7 @@ public class VirtualService implements AutoCloseable {
                     }
                     break;
                 } catch (RuntimeException | AssertionError e) {
-                    if (System.currentTimeMillis() - time0 > timeoutSec * 1000) throw e;
+                    if (System.currentTimeMillis() - time0 > timeoutSec * 1000L) throw e;
 
                     await().timeout(1, TimeUnit.SECONDS);
                     slept = true;
@@ -576,7 +560,7 @@ public class VirtualService implements AutoCloseable {
     public List<String> getGatewayUrls() {
         return DiscoveryUtils.getGatewayUrls().stream()
                 .map(x -> String.format("%s/%s%s", x, serviceId.toLowerCase(), gatewayPath))
-                .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -584,21 +568,21 @@ public class VirtualService implements AutoCloseable {
      * @return list of url to the header servlet, for each registered gateway one
      */
     public List<String> getGatewayHeaderUrls(String headerName) {
-        return getGatewayUrls().stream().map(x -> x + "/header/" + headerName).collect(Collectors.toList());
+        return getGatewayUrls().stream().map(x -> x + "/header/" + headerName).toList();
     }
 
     /**
      * @return url of all gateways to this service and health service
      */
     public List<String> getGatewayHealthUrls() {
-        return getGatewayUrls().stream().map(x -> x + "/application/health").collect(Collectors.toList());
+        return getGatewayUrls().stream().map(x -> x + "/application/health").toList();
     }
 
     /**
      * @return URL of all gateways to this service and servlet {@link VerifyServlet}
      */
     public List<String> getGatewayVerifyUrls() {
-        return getGatewayUrls().stream().map(x -> x + "/verify").collect(Collectors.toList());
+        return getGatewayUrls().stream().map(x -> x + "/verify").toList();
     }
 
     @AllArgsConstructor
@@ -651,7 +635,7 @@ public class VirtualService implements AutoCloseable {
                 await().timeout(100, TimeUnit.MILLISECONDS);
                 if (instanceId == null) continue;
 
-                if (lastCall + 1000 * heartbeatInterval < System.currentTimeMillis()) {
+                if (lastCall + 1000L * heartbeatInterval < System.currentTimeMillis()) {
                     lastCall = System.currentTimeMillis();
                     sendHeartBeat();
                 }
@@ -694,7 +678,7 @@ public class VirtualService implements AutoCloseable {
 
     /**
      * Servlet answer on /application/instance Http method and instanceId. This is base part of method to verify registration on
-     * gateways, see {@link #waitForGatewayRegistration(int, int)} and {@link #waitForGatewayUnregistering(int, int)}
+     * gateways, see {@link #waitForGatewayRegistration(int)} and {@link #waitForGatewayUnregistering(int, int)}
      */
     @NoArgsConstructor
     public class InstanceServlet extends HttpServlet {
